// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tester/TopBanner/TopBannerInternalActionMenu WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="actionMenuId"
          class="_button_r1hjf_1 _button_withIconLeft_r1hjf_8  actionMenuClassname"
          lang="en"
          data-testid="actionMenuTestId"
          data-brightness="light"
          type="button"
          aria-expanded="false"
  >
    <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_r1hjf_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
      </path>
    </svg>
    <span class>
      Meny
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternalActionMenu WithImperativeActions play-test 1`] = `
<div data-test-block="true">
  <button class="_button_r1hjf_1 _button_withIconLeft_r1hjf_8"
          data-brightness="light"
          type="button"
          aria-expanded="false"
  >
    <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_r1hjf_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
      </path>
    </svg>
    <span class>
      Meny
    </span>
  </button>
  <button class="_button_r1hjf_1   marginLeftL"
          data-brightness="light"
          type="button"
  >
    <span class>
      Åpne
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternalActionMenu WithRef play-test 1`] = `
<div data-test-block="true">
  <button class="_button_r1hjf_1 _button_withIconLeft_r1hjf_8"
          data-brightness="light"
          type="button"
          id="dummyIdForwardedFromRef"
          aria-expanded="false"
  >
    <svg class="_systemIcon_o38m2_2 _systemIcon_medium_o38m2_10 _icon_r1hjf_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
      </path>
    </svg>
    <span class>
      Meny
    </span>
  </button>
</div>
`;
